create github pages

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sZt8PXFQaU-modal" data-bs-target="#sZt8PXFQaU-modal">
-                    <img class="w-100" src="assets/images/mbr-596x397.jpeg" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-sZt8PXFQaU" data-bs-target="#lb-sZt8PXFQaU">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sZt9gVTo8e-modal" data-bs-target="#sZt9gVTo8e-modal">
+                    <img class="w-100" src="assets/images/mbr-596x397.jpeg" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-sZt9gVTo8e" data-bs-target="#lb-sZt9gVTo8e">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -174,8 +174,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Social Media Management</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sZt8PXFQaU-modal" data-bs-target="#sZt8PXFQaU-modal">
-                    <img class="w-100" src="assets/images/corel-draw-x7-graphics-suite-full-keygen-logo.jpg" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sZt8PXFQaU" data-bs-target="#lb-sZt8PXFQaU">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sZt9gVTo8e-modal" data-bs-target="#sZt9gVTo8e-modal">
+                    <img class="w-100" src="assets/images/corel-draw-x7-graphics-suite-full-keygen-logo.jpg" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sZt9gVTo8e" data-bs-target="#lb-sZt9gVTo8e">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -183,8 +183,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Photo / Graphic Editing</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sZt8PXFQaU-modal" data-bs-target="#sZt8PXFQaU-modal">
-                    <img class="w-100" src="assets/images/content-planning-sm.png" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sZt8PXFQaU" data-bs-target="#lb-sZt8PXFQaU">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sZt9gVTo8e-modal" data-bs-target="#sZt9gVTo8e-modal">
+                    <img class="w-100" src="assets/images/content-planning-sm.png" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sZt9gVTo8e" data-bs-target="#lb-sZt9gVTo8e">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -192,8 +192,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Content Planning</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sZt8PXFQaU-modal" data-bs-target="#sZt8PXFQaU-modal">
-                    <img class="w-100" src="assets/images/lobbying2-blogpost.jpeg" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sZt8PXFQaU" data-bs-target="#lb-sZt8PXFQaU">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sZt9gVTo8e-modal" data-bs-target="#sZt9gVTo8e-modal">
+                    <img class="w-100" src="assets/images/lobbying2-blogpost.jpeg" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sZt9gVTo8e" data-bs-target="#lb-sZt9gVTo8e">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -202,11 +202,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sZt8PXFQaU-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sZt9gVTo8e-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-sZt8PXFQaU" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-sZt9gVTo8e" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/mbr-596x397.jpeg" alt="">
@@ -222,18 +222,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-sZt8PXFQaU" data-bs-target="#lb-sZt8PXFQaU"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sZt8PXFQaU" data-bs-target="#lb-sZt8PXFQaU"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sZt8PXFQaU" data-bs-target="#lb-sZt8PXFQaU"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sZt8PXFQaU" data-bs-target="#lb-sZt8PXFQaU"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-sZt9gVTo8e" data-bs-target="#lb-sZt9gVTo8e"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sZt9gVTo8e" data-bs-target="#lb-sZt9gVTo8e"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sZt9gVTo8e" data-bs-target="#lb-sZt9gVTo8e"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sZt9gVTo8e" data-bs-target="#lb-sZt9gVTo8e"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-sZt8PXFQaU">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-sZt9gVTo8e">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-sZt8PXFQaU">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-sZt9gVTo8e">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -255,7 +255,7 @@
         <div class="row content-wrapper justify-content-center">
             <div class="col-lg-4 offset-lg-1 mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="70vxKVgUVLHEd6SMcCRLT0MOo1/4NOdrNuym/5mdUBhohjaaS0AdNnIT0xOVNOkv3IlpErzc5uNv/68zZC5XJymn7S+6W/4W+KliZu4cbCBWN876xJJSx1RoLNVKX3On">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="P5+R8g9POtCB+H59f3d87u8jsxwbmcYbos0PCt6Jnad7U8hAW/aO1fwWNjYCBglMpalmNIjID8VhQUtfuruKq+Xa4qOB0OB01wrblvIKXIh2Ej4D+RkFz3EyjWzEPU96">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -375,7 +375,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/v" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i" style="color:#aaa;">Designed with Mobirise</a> web creator</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/o" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Build a free website with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
